# FastAPI-tutorial

./: items_views.py  main.py  pyproject.toml
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: db_helper.py
users/: crud.py
