[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Maksym Litvinenko <maksym.lithuanian@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
uvicorn = {extras = ["standart"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
